<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_padding_and_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/padding_and_margin" />

    <Button
        android:id="@+id/button_linear_layout_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/linear_layout_vertical" />

    <Button
        android:id="@+id/button_linear_layout_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/linear_layout_horizontal" />

    <Button
        android:id="@+id/button_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frame_layout" />

    <Button
        android:id="@+id/button_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/relative_layout" />

    <Button
        android:id="@+id/button_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/constraint_layout" />

    <Button
        android:id="@+id/button_widgets_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/widgets_normal"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/button_widgets_api"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/widgets_api" />

    <Button
        android:id="@+id/button_widgets_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/widgets_menu" />

    <Button
        android:id="@+id/button_list_array_adapter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_array_adapter"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/button_list_custom_adapter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_custom_adapter" />

    <Button
        android:id="@+id/button_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_recycler_view" />

</LinearLayout>